compiler/crates/riposte-c/tests/snapshots/snapshots__categorical_effectiveness_e032.snap
---
source: crates/riposte-c/tests/snapshots.rs
expression: report(src)
---
{
  "diagnostics": [
    {
      "code": "E032",
      "docs_tool": "explain_error:E032",
      "hint": "e.g. effectiveness(m, d) at_least super",
      "message": "effectiveness is categorical; compare with at_least/at_most",
      "severity": "error",
      "span": {
        "col": 16,
        "file": "bot.rpo",
        "len": 54,
        "line": 3
      }
    }
  ],
  "status": "error",
  "version": "0.1"
}
