compiler/crates/riposte-c/tests/snapshots/snapshots__illegal_action_in_forced_switch_e041.snap
---
source: crates/riposte-c/tests/snapshots.rs
expression: report(src)
---
{
  "diagnostics": [
    {
      "code": "E041",
      "docs_tool": "explain_error:E041",
      "hint": "`on forced_switch` allows switch actions only",
      "message": "illegal action for this block",
      "severity": "error",
      "span": {
        "col": 81,
        "file": "bot.rpo",
        "len": 12,
        "line": 3
      }
    }
  ],
  "status": "error",
  "version": "0.1"
}
